--- a/Notes/mainwindow.ui
+++ b/Notes/mainwindow.ui
@@ -22,6 +22,12 @@
     <height>600</height>
    </size>
   </property>
+  <property name="font">
+   <font>
+    <family>Century Gothic</family>
+    <pointsize>9</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -30,19 +36,25 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>50</y>
+      <y>40</y>
       <width>261</width>
-      <height>451</height>
+      <height>461</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Century Gothic</family>
+      <pointsize>10</pointsize>
+     </font>
     </property>
    </widget>
    <widget class="QListWidget" name="listNotes">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>50</y>
-      <width>601</width>
-      <height>451</height>
+      <x>280</x>
+      <y>40</y>
+      <width>611</width>
+      <height>461</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -50,6 +62,12 @@
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
+    </property>
+    <property name="font">
+     <font>
+      <family>Century Gothic</family>
+      <pointsize>10</pointsize>
+     </font>
     </property>
    </widget>
    <widget class="QPushButton" name="buttonNewTag">
@@ -63,8 +81,8 @@
     </property>
     <property name="font">
      <font>
-      <family>Calibri</family>
-      <pointsize>12</pointsize>
+      <family>Century Gothic</family>
+      <pointsize>10</pointsize>
      </font>
     </property>
     <property name="text">
@@ -74,16 +92,16 @@
    <widget class="QPushButton" name="puttonNewNote">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>280</x>
       <y>510</y>
-      <width>601</width>
+      <width>611</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Calibri</family>
-      <pointsize>12</pointsize>
+      <family>Century Gothic</family>
+      <pointsize>10</pointsize>
      </font>
     </property>
     <property name="text">
@@ -93,16 +111,16 @@
    <widget class="QLabel" name="labeltags">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>10</y>
-      <width>251</width>
-      <height>31</height>
+      <x>10</x>
+      <y>0</y>
+      <width>261</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Calibri</family>
-      <pointsize>16</pointsize>
+      <family>Century Gothic</family>
+      <pointsize>14</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
@@ -114,16 +132,16 @@
    <widget class="QLabel" name="labelNotes">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>10</y>
-      <width>251</width>
-      <height>31</height>
+      <x>280</x>
+      <y>0</y>
+      <width>611</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Calibri</family>
-      <pointsize>16</pointsize>
+      <family>Century Gothic</family>
+      <pointsize>14</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
@@ -135,6 +153,11 @@
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
    <property name="movable">
     <bool>false</bool>
    </property>
