Added new NoteClass. Added private slots for buttons and actions

--- a/Notes/mainwindow.ui
+++ b/Notes/mainwindow.ui
@@ -89,7 +89,7 @@
      <string>New Tag</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="puttonNewNote">
+   <widget class="QPushButton" name="buttonNewNote">
     <property name="geometry">
      <rect>
       <x>280</x>
