--- a/Notes/notedialog.ui
+++ b/Notes/notedialog.ui
@@ -41,7 +41,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>Text</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -98,6 +98,11 @@
      <height>21</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <italic>true</italic>
+    </font>
+   </property>
    <property name="text">
     <string>Tags : </string>
    </property>
@@ -113,6 +118,11 @@
      <width>531</width>
      <height>21</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <italic>true</italic>
+    </font>
    </property>
    <property name="text">
     <string>tags list</string>
