--- a/Notes/notedialog.ui
+++ b/Notes/notedialog.ui
@@ -109,7 +109,7 @@
     </font>
    </property>
    <property name="text">
-    <string>tags list</string>
+    <string>uncategorized</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
